--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: epson-printer-handler
     ports:
-      - "3100:3100"
+      - "${PORT:-3100}:${PORT:-3100}"
     # Grant access to USB devices
     devices:
       - /dev/bus/usb:/dev/bus/usb
@@ -17,7 +17,7 @@ services:
     # Keep container running
     restart: unless-stopped
     environment:
-      - PORT=3100
+      - PORT=${PORT:-3100}
     # Optional: Mount CUPS socket if you want to use system CUPS
     # volumes:
     #   - /var/run/cups:/var/run/cups
