--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,49 @@
+# Dependencies
 node_modules
 npm-debug.log
+# Note: package-lock.json is needed for npm ci, so we keep it
+
+# Git
 .git
 .gitignore
+.gitattributes
+
+# Documentation
 README.md
+LICENSE
+*.md
+
+# Environment files
 .env
+.env.*
+stack.env
+
+# OS files
 .DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# Logs
 *.log
+logs
+*.log.*
+
+# IDE
+.vscode
+.idea
+*.sublime-*
+
+# Docker
+.dockerignore
+Dockerfile
+docker-compose.yml
+docker-compose.*.yml
+
+# Build artifacts
+dist
+build
+*.tgz
+*.tar.gz
 
