--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Docker image files (too large for git)
+*.tar.gz
+epson-printer-handler.tar.gz
+
