Migrated backend to support python usb modules

--- a/stack.env
+++ b/stack.env
@@ -2,3 +2,9 @@
 # Port for the Epson Printer Handler web server
 PORT=3100
 
+# USB Vendor and Product IDs for direct USB printing (optional)
+# Find these using: lsusb (look for Epson device)
+# Format: hex (0x04b8) or decimal (1208)
+# USB_VENDOR_ID=0x04b8
+# USB_PRODUCT_ID=0x0202
+
